--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
 asgiref==3.4.1
+click==8.0.3
+colorama==0.4.4
 Django==3.2.9
 django-crispy-forms==1.13.0
+django-filebrowser==4.0.1
+django-grappelli==3.0.2
+django-tinymce==3.4.0
+itsdangerous==2.0.1
+MarkupSafe==2.0.1
 Pillow==8.4.0
 pytils==0.3
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
+Werkzeug==2.0.2
